Se solucionaron algunos problemas

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
 <body>
     <header>
-        <img src="assets/img/Marvel__Logo.png" alt="">
+        <img src="assets/img/Marvel.gif" alt="">
     </header>
 
-    <main> 
+    <main>
         <section id="marvel"></section>
+
+        <section class="pagination">
+            <i id="prev" class="fa-solid fa-circle-left pagination__item" title="Anterior" data-prev=""></i>
+            <i id="next" class="fa-solid fa-circle-right pagination__item" title="Siguiente" data-next=""></i>
+        </section>
     </main>
 
     <div class="mar__studio marstudio-fluid">
@@ -23,12 +28,9 @@
             <div id="main" class="cont__mar"></div>
         </div>
     </div>
-
     
-    <img width="200" class="marvel__inicio" src="assets/img/pngwing.com.png" alt="">
-
-
     <footer>
+        <img width="150" src="assets/img/Marvel__Logo.png" alt="">
         <p> ® Todos los derechos de autor </p>
         <p> Valentina Marín Cardona</p>
     </footer>
