--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <p> Valentina Marín Cardona</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
 </body>
 
